# liveletters

./: .gitignore
apps/liveletters-frontend-app/: TECHNICAL_SPEC.md  deps.edn  package.json  pnpm-lock.yaml  shadow-cljs.edn
apps/liveletters-rust-backend-app/: Cargo.toml  INTERFACE.md  TECHNICAL_SPEC.md  build.rs  run-tauri-e2e.sh  run-tauri-runtime.sh  tauri.conf.json
apps/liveletters-rust-backend-app/capabilities/: default.json
apps/liveletters-rust-backend-app/e2e/: eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
apps/liveletters-rust-backend-app/e2e/helpers/: fixtures.ts  selectors.ts  tauri-mock.ts
apps/liveletters-rust-backend-app/e2e/tests/: bootstrap.e2e.ts  editor.e2e.ts  modals.e2e.ts  settings-reopen.e2e.ts
apps/liveletters-rust-backend-app/permissions/: default.toml
apps/liveletters-rust-backend-app/src/: backend.rs  bootstrap.rs  commands.rs  dto.rs  errors.rs  events.rs  lib.rs  main.rs  runtime.rs  runtime_options.rs
apps/liveletters-rust-backend-app/tests/: backend_flow.rs  smoke.rs
docs/: build.md  clojurescript-testing.md  idea.preliminary.md  idea.technical.md  ornament-tutorial.md  tauri-client-structure.md  tauri-e2e.md  tauri-linux-prerequisites.md  workspace-structure.md
docs/adr/: 0001-monorepo-and-version-pinning.md  0002-development-invariants-and-internal-documents.md  0003-test-lint-format-and-shared-utils.md  0004-no-local-m2.md  0005-incremental-reports-in-docs.md  0006-freeze-idea-documents.md  0007-no-single-file-subprojects.md  0008-temporary-home-in-tests.md  0009-conservative-frontend-state-with-atom.md  0010-minimal-logs-and-signal-test-output.md  0011-interface-md-for-public-module-boundaries.md  README.md
modules/liveletters-app-core/: Cargo.toml  INTERFACE.md  TECHNICAL_SPEC.md
modules/liveletters-app-core/src/: commands.rs  errors.rs  lib.rs  queries.rs  read_models.rs  service.rs
modules/liveletters-app-core/tests/: app_core_flow.rs  smoke.rs
modules/liveletters-diagnostics/: Cargo.toml  INTERFACE.md  TECHNICAL_SPEC.md
modules/liveletters-domain/: Cargo.toml  INTERFACE.md  TECHNICAL_SPEC.md
modules/liveletters-frontend-api/: INTERFACE.md  TECHNICAL_SPEC.md
modules/liveletters-mail/: Cargo.toml  INTERFACE.md  TECHNICAL_SPEC.md
modules/liveletters-sync/: Cargo.toml  INTERFACE.md  TECHNICAL_SPEC.md
modules/liveletters-sync/src/: engine.rs  errors.rs  lib.rs  reporting.rs
modules/liveletters-sync/tests/: smoke.rs  sync_ingest.rs
utils/: README.md
(+89 files in other folders)
