[package]
name = "liveletters-sync"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
liveletters-mail = { path = "../liveletters-mail" }
liveletters-protocol = { path = "../liveletters-protocol" }
liveletters-store = { path = "../liveletters-store" }
serde_json = "1.0"
